opam-version: "2.0"
author: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
synopsis: "An opam plugin to install a package using a custom command"
description: """
Provides the `opam custom-install` command, which allows to wrap a custom install command, and make opam register it as the installation of a given package. This is a prototype provided for the moment as a plugin, but might get integrated into opam if useful.
"""
tags: ["org:ocamlpro" "org:opam"]
license: "LGPL-2.1-only with OCaml-LGPL-linking-exception"
depends: [
  "dune"
  "opam-client" {>= "2.1.0~beta2"}
]
build: ["dune" "build" "-p" name "-j" jobs]
flags: plugin
pin-depends: [
  ["opam-client.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
  ["opam-state.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
  ["opam-solver.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
  ["opam-repository.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
  ["opam-format.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
  ["opam-core.2.1.0~beta2" "git+ssh://git@github.com/ocaml/opam.git#2.1.0-beta2"]
]
