opam-version: "2.0"
author: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
maintainer: "Louis Gesbert <louis.gesbert@ocamlpro.com>"
synopsis: "An opam plugin to install a package using a custom command"
description: """
Provides the `opam custom-install` command, which allows to wrap a custom install command, and make opam register it as the installation of a given package. This is a prototype provided for the moment as a plugin, but might get integrated into opam if useful.
"""
tags: ["org:ocamlpro" "org:opam"]
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
depends: [
  "dune" {>= "1.5"}
  "opam-client" {>= "2.1.2" & < "2.2.0"}
]
homepage: "https://github.com/OCamlPro/opam-custom-install"
bug-reports: "https://github.com/OCamlPro/opam-custom-install/-/issues"
dev-repo: "git+https://github.com/OCamlPro/opam-custom-install"
build: ["dune" "build" "-p" name "-j" jobs]
flags: plugin
